# OpenCVProject

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/sensology/opencvproject/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: cubic_log.h  native-lib.cpp
app/src/main/cpp/jni/: Android.mk  Application.mk  native-lib.cpp
app/src/main/java/com/sensology/opencvproject/: MainActivity.java  OpenCVUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/sensology/opencvproject/: ExampleUnitTest.java
